--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Document</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>Text title lavel 1 !!!</h1>
