+ js file, click H1

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       delectus asperiores recusandae eos autem dolores quibusdam optio
       consectetur praesentium officiis! Ullam!
     </p>
+    <script src="/script.js"></script>
   </body>
 </html>
